--- a/Driven Vortex Flow.ipynb
+++ b/Driven Vortex Flow.ipynb
@@ -32,17 +32,13 @@
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "\n",
-    "# ----------------------------\n",
-    "# 1. Velocity field definition\n",
-    "# ----------------------------\n",
+    "# defining the velocity field \n",
     "def vortex_velocity(x, y, t, A=8.35, B=-2.55, e=0.2):\n",
     "    u = A * (1 + e * np.sin(np.pi * t)) * np.cos(y) + B * np.sin(2 * x) * np.cos(y)\n",
     "    v = -2 * B * np.cos(2 * x) * np.sin(y)\n",
     "    return u, v\n",
     "\n",
-    "# ----------------------------\n",
-    "# 2. RK4 advection step\n",
-    "# ----------------------------\n",
+    "# using the runge kutta method to solve the differential equation\n",
     "def rk4_step(pos, t, dt):\n",
     "    x, y = pos\n",
     "    u1, v1 = vortex_velocity(x, y, t)\n",
@@ -59,9 +55,7 @@
     "    \n",
     "    return x_new, y_new\n",
     "\n",
-    "# ----------------------------\n",
-    "# 3. Grid Setup\n",
-    "# ----------------------------\n",
+    "# setting up the grid\n",
     "nx_cells, ny_cells = 20, 20  # adjust for resolution\n",
     "x_vals = np.linspace(0, np.pi, nx_cells)\n",
     "y_vals = np.linspace(0, np.pi, ny_cells)\n",
@@ -71,9 +65,7 @@
     "N = nx_cells * ny_cells\n",
     "transition_matrix = np.zeros((N, N))\n",
     "\n",
-    "# ----------------------------\n",
-    "# 4. Advection Simulation\n",
-    "# ----------------------------\n",
+    "#setting up the time frame\n",
     "dt = 0.1\n",
     "s = 2.0\n",
     "steps = int(s / dt)\n",
@@ -83,35 +75,30 @@
     "    for _ in range(steps):\n",
     "        x, y = rk4_step((x, y), t=0, dt=dt)\n",
     "    \n",
-    "    # Map final pos to grid cell\n",
+    "    \n",
     "    xi = int(np.floor((x / np.pi) * nx_cells)) % nx_cells\n",
     "    yi = int(np.floor((y / np.pi) * ny_cells)) % ny_cells\n",
     "    j = yi * nx_cells + xi\n",
     "    transition_matrix[i, j] += 1\n",
     "\n",
-    "# Normalize rows (row-stochastic transition matrix)\n",
+    "# constructing the weighted adjancey matrix and the unweighted adjancy matrix\n",
     "row_sums = transition_matrix.sum(axis=1, keepdims=True)\n",
     "row_sums[row_sums == 0] = 1\n",
     "T = transition_matrix / row_sums\n",
     "A = (T > 0).astype(int)\n",
     "\n",
-    "# ----------------------------\n",
-    "# 5. Build Network and Centrality\n",
-    "# ----------------------------\n",
+    "#build network\n",
     "G = nx.DiGraph()\n",
     "for i in range(N):\n",
     "    for j in range(N):\n",
     "        if T[i, j] > 0:\n",
     "            G.add_edge(i, j, weight=T[i, j])\n",
     "\n",
-    "# Betweenness Centrality (weighted)\n",
+    "# weighted betweenness centrality\n",
     "centrality = nx.betweenness_centrality(G, weight='weight', normalized=True)\n",
     "centrality_arr = np.array([centrality.get(i, 0) for i in range(N)])\n",
     "centrality_grid = centrality_arr.reshape((ny_cells, nx_cells))\n",
     "\n",
-    "# ----------------------------\n",
-    "# 6. Visualization\n",
-    "# ----------------------------\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "# Transition Matrix Heatmap\n",
@@ -132,7 +119,7 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "\n",
+    "# building the unweighted adjancey matrix\n",
     "plt.figure(figsize=(6, 5))\n",
     "plt.imshow(A, cmap='gray_r', aspect='auto')\n",
     "\n",
